# foveated_yolt

./: .gitignore  CMakeLists.txt  CMakeLists.txt_old  README.md  feedback_detection.txt  feedback_detection_parse.txt  feedback_detection_parse_100.txt  final_results.txt  package.xml  raw_bbox.txt  raw_bbox_parse.txt  raw_bbox_parse_100.txt
action/: Eye.action  Task.action
cfg/: fovea.cfg
cmake/Modules/: FindCaffe.cmake
cmake_old/Modules/: FindCaffe.cmake
dataset/detections/new/: feedback_detection_parse_cartesian_caffe.txt  feedback_detection_parse_cartesian_caffe_10.txt  feedback_detection_parse_cartesian_google.txt  feedback_detection_parse_cartesian_vgg.txt  feedback_detection_parse_crop_high_blur_caffenet_100.txt  feedback_detection_parse_crop_high_blur_google_100.txt  feedback_detection_parse_crop_high_blur_vggnet_100.txt  feedback_detection_parse_fovea_high_blur_caffenet_100.txt  feedback_detection_parse_fovea_high_blur_google_100.txt  feedback_detection_parse_fovea_high_blur_vggnet_100.txt  raw_bbox_parse_cartesian_caffe - Cópia.txt  raw_bbox_parse_cartesian_caffe.txt  raw_bbox_parse_cartesian_caffe_10.txt  raw_bbox_parse_cartesian_google.txt  raw_bbox_parse_cartesian_vgg.txt  raw_bbox_parse_crop_high_blur_caffenet_100.txt  raw_bbox_parse_crop_high_blur_caffenet_200.txt  raw_bbox_parse_crop_high_blur_google_100.txt  raw_bbox_parse_crop_high_blur_vggnet_100.txt  raw_bbox_parse_fovea_high_blur_caffenet_100.txt  raw_bbox_parse_fovea_high_blur_google_100.txt  raw_bbox_parse_fovea_high_blur_vggnet_100.txt  test_caffe.txt
files/: ILSVRC2012_bbox_val_v3.tgz?dl=0  deploy_alexnet.prototxt  deploy_googlenet.prototxt  deploy_mobilenet.prototxt  deploy_squeezenet.prototxt  ground_truth_labels_ilsvrc12.txt  localization_error_yolo.py
include/: laplacian_foveation.hpp  network_classes.hpp
include/ros/: foveation_ros.hpp  yolt_ros.hpp
launch/: foveated_yolt.launch
matlab/: foveal_test.m  gaussian_theory.m  parse_detections2.m  parse_ground_truth.m  plot_gaussian.m  results.m  results_cris.m  test.m
matlab_cris/: class_results.m  classification_error_rates.m  classification_error_rates2.m  detection_error_rates.m  feedback_parse_detections.m  parameters.m  parameters.mat  parse_detections.m  results2.m  results_cris.m  untitled2.m
results/: Untitled Document  caffe.m  classification_error_rates.m  compare_models.m  detection_error_rates.m  feedback_detection_parse.txt  feedback_detection_t1s16p10r1i100.txt  feedback_detection_t1s16p16r0i100.txt  feedback_detection_t1s16p1r0i100.txt  feedback_detection_t21s1p10r1i100.txt  feedback_detection_t21s1p16r0i100.txt  feedback_detection_t21s1p1r0i100.txt  feedback_parse_detections.m  feedback_parse_detections2.m  feedforward_detection_parse.txt  feedfoward_detection_t1s16p10r1i100.txt  feedfoward_detection_t1s16p16r0i100.txt  feedfoward_detection_t1s16p1r0i100.txt  feedfoward_detection_t21s1p10r1i100.txt  feedfoward_detection_t21s1p16r0i100.txt  feedfoward_detection_t21s1p1r0i100.txt  fovea_attenuation.m  foveal_test.m  google.m  parse_detections.m  parse_detections.m~  parse_detections2.m  parse_ground_truth.m  plot_cartesian.m  plot_combined.m  plot_foveal.m  psnr_sigma.m  results.m  results2.m  test.m  test_cartesian.m  test_compression.m  test_hybrid.m  untitled.m  vgg.m
scripts/: run_detector.sh  setup.sh
src/: cartesian_test.cpp  classdata.h  foveation.cpp  laplacian_foveation.cpp  laplacian_foveation.hpp  network_classes.cpp  network_classes.hpp  np_opencv_module.cpp  original_yolt.cpp  test.py  test_fovea.cpp  thesis.cpp  thesis_local_yolo.cpp  thesis_no_blur.cpp  yolt.cpp  yolt_exp.cpp  yolt_exp2.cpp  yolt_python.cpp
src/python_bindings/: __init__.py  conversions.cpp  conversions.h  np_opencv_module.cpp  nv_opencv_module.cpp  smooth_foveation.cpp  test.py  yolt_python.cpp
src/ros/: foveation_ros.cpp  foveation_ros_node.cpp  yolt_ros.cpp  yolt_ros_node.cpp
src/utils/: conversion.cpp
test/matlab/: classification_error_rates.m  feedback_parse_detections.m  fovea_attenuation2.m  results2.m  tdfread.m
test/matlab_cris/: CErrors.m  LErrors.m  class_results.m  classification_error_rates.m  detection_error_rates.m  feedback_parse_detections.m  graphics.m  results.m
