<?xml version="1.0"?>
<package>
  <name>foveated_yolt</name>
  <version>0.0.0</version>
  <description>The foveated_yolt package</description>

  <maintainer email="rui@todo.todo">rui</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
